# leetcode.rs

./: Cargo.toml  README.md  rustfmt.toml  template.rs
src/: cli.rs  fetch.rs  formatter.rs  lib.rs  main.rs
src/problem_sets/: mod.rs  p0027_remove_element.rs  p0079_word_search.rs  p0088_merge_sorted_array.rs  p0756_pyramid_transition_matrix.rs
src/solution_sets/: mod.rs  s0001_two_sum.rs  s0011_container_with_most_water.rs  s0026_remove_duplicates_from_sorted_array.rs  s0027_remove_element.rs  s0075_sort_colors.rs  s0080_remove_duplicates_from_sorted_array_ii.rs  s0088_merge_sorted_array.rs  s0167_two_sum_ii_input_array_is_sorted.rs  s0172_factorial_trailing_zeroes.rs  s0206_reverse_linked_list.rs  s0209_minimum_size_subarray_sum.rs  s0215_kth_largest_element_in_an_array.rs  s0232_implement_queue_using_stacks.rs  s0283_move_zeroes.rs  s0496_next_greater_element_i.rs  s1365_how_many_numbers_are_smaller_than_the_current_number.rs  s1925_count_square_sum_triples.rs
src/util/: linked_list.rs  mod.rs  tree.rs
