[package]
name = "practice-leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["json"] }
serde = "1"
serde_json = "1"
serde_derive = "1"
once_cell = "1"
tokio = { version = "1.17.0", features = ["full"]}
regex = "1.5.5"
rand = "0.8.5"
clap = "3.1.6"
failure = "0.1.8"
log = "0.4.16"
env_logger = "0.9.0"